licensedetection-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: licensedetection-app-service
  namespace: ttt
  labels:
    app: licensedetection-app-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8501
  type: LoadBalancer
  selector:
    app: licensedetection-app
